--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,43 @@ dependencies:
   sqflite: ^2.1.0+1
   flutter_staggered_animations: ^1.1.1
   get:
+  flutter_native_splash: ^2.2.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+
+  flutter_launcher_icons: "^0.10.0"
+
+
+flutter_native_splash:
+  color: "#4e5ae8"
+  image: assets/play_store_feature_graphic.png
+  color_dark: "#4e5ae8"
+  image_dark: assets/play_store_feature_graphic.png
+  fullscreen: true
+  android: true
+  ios: true
+  web: false
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/play_store_512.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/play_store_512.png"
+    background_color: "#3FCF7E"
+    theme_color: "#4e5ae8"
+  windows:
+    generate: true
+    image_path: "assets/play_store_512.png"
+    icon_size: 48 # min:48, max:256, default: 48
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,9 +103,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
